Fix the focus cutoff of the editor buttons

--- a/packages/edit-widgets/src/components/header/style.scss
+++ b/packages/edit-widgets/src/components/header/style.scss
@@ -81,7 +81,6 @@
 	flex-shrink: 2;
 	padding-right: $grid-unit-10;
 	padding-left: $grid-unit-20;
-	overflow: hidden;
 }
 
 .edit-widgets-header__title {
